# Rudra

./: CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  docs.yml  release.yml
backend/: auth.py  config.py  database.py  keycloak_client.py  main.py  requirements.txt
docs/: docs.html
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Layout.jsx  Modal.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: CouponsPage.jsx  CreateProjectPage.jsx  DashboardPage.jsx  LoginPage.jsx  ProjectDetailPage.jsx  ProjectsPage.jsx  RegisterPage.jsx
frontend/src/utils/: api.js
sdk/javascript/: README.md  package.json
sdk/javascript/src/: index.js
sdk/python/: README.md  setup.py
sdk/python/rudra_sdk/: __init__.py
