[tool.poetry]
name = "rudra"
version = "1.0.0"
description = "Open-source managed authentication platform powered by Keycloak"
authors = ["Rudra Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rudra-auth/rudra"
repository = "https://github.com/rudra-auth/rudra"
keywords = ["auth", "keycloak", "sso", "oidc", "saml", "mfa", "rbac"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
packages = [
    { include = "rudra_sdk", from = "sdk/python" },
]

[tool.poetry.dependencies]
python = "^3.10"
# Backend
fastapi = "^0.109.2"
uvicorn = { version = "^0.27.1", extras = ["standard"] }
motor = "^3.3.2"
pymongo = "^4.6.1"
httpx = "^0.27.0"
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
pydantic = "^2.6.1"
python-multipart = "^0.0.9"
redis = { version = "^5.0.1", extras = ["hiredis"] }
# SDK
requests = "^2.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
ruff = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 140

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E701", "E702"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
